--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "^17.0.3",
+    "@commitlint/config-conventional": "^17.0.3",
     "@emotion/eslint-plugin": "^11.7.0",
     "@next/eslint-plugin-next": "^12.2.0",
     "@testing-library/jest-dom": "^5.16.4",
