--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/react-hooks": "^8.0.1",
     "@types/jest": "^28.1.3",
+    "@types/jest-plugin-context": "^2",
     "@types/node": "18.0.0",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
@@ -63,9 +64,11 @@
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "eslint-plugin-testing-library": "^5.5.1",
     "eslint-plugin-unused-imports": "^2.0.0",
+    "given2": "^2.1.7",
     "husky": "^8.0.1",
     "jest": "^28.1.1",
     "jest-environment-jsdom": "^28.1.1",
+    "jest-plugin-context": "^2.9.0",
     "lint-staged": "^13.0.3",
     "react-test-renderer": "^18.2.0",
     "start-server-and-test": "^1.14.0",
