--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "@emotion/styled": "^11.9.3",
     "next": "^12.2.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-query": "beta",
+    "recoil": "^0.7.4"
   },
   "devDependencies": {
     "@babel/core": "^7.18.6",
