--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "emotion-normalize": "^11.0.1",
     "next": "^12.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0"
