--- a/package.json
+++ b/package.json
@@ -32,11 +32,12 @@
   "dependencies": {
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "@tanstack/react-query": "^4.0.10",
+    "@tanstack/react-query-devtools": "^4.0.10",
     "emotion-normalize": "^11.0.1",
     "next": "^12.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-query": "beta",
     "recoil": "^0.7.4"
   },
   "devDependencies": {
