--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -101,16 +101,14 @@ jobs:
         if: github.event_name != 'push'
         run: yarn test:unit
 
-      - name: Install cypress dependencies
-        run: yarn add cypress
-
       - name: Run Cypress with Chrome
         uses: cypress-io/github-action@v3.1.0
         with:
           browser: chrome
           record: true
           config-file: cypress.config.js
-          install: false
+          install-command: yarn install --immutable
+          command-prefix: yarn dlx
           start: yarn dev
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
