--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@tanstack/react-query": "^4.0.10",
     "@tanstack/react-query-devtools": "^4.0.10",
     "emotion-normalize": "^11.0.1",
+    "facepaint": "^1.2.1",
     "next": "^12.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -56,10 +57,12 @@
     "@storybook/manager-webpack5": "^6.5.9",
     "@storybook/react": "^6.5.9",
     "@storybook/testing-library": "^0.0.13",
+    "@svgr/webpack": "^6.3.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/react-hooks": "^8.0.1",
     "@types/babel__core": "^7",
+    "@types/facepaint": "^1",
     "@types/jest": "^28.1.3",
     "@types/jest-plugin-context": "^2",
     "@types/node": "18.0.0",
