--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "next-pwa": "5.5.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-input-range": "^1.3.0",
     "react-spring": "^9.5.2",
     "recoil": "^0.7.4"
   },
