--- a/package.json
+++ b/package.json
@@ -34,11 +34,13 @@
     "@emotion/styled": "^11.9.3",
     "@tanstack/react-query": "^4.0.10",
     "@tanstack/react-query-devtools": "^4.0.10",
+    "axios": "^0.27.2",
     "emotion-normalize": "^11.0.1",
     "facepaint": "^1.2.1",
     "next": "^12.2.2",
     "next-compose-plugins": "^2.2.1",
     "next-pwa": "5.5.4",
+    "qs": "^6.11.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-input-range": "^1.3.0",
@@ -70,6 +72,7 @@
     "@types/jest": "^28.1.3",
     "@types/jest-plugin-context": "^2",
     "@types/node": "18.0.0",
+    "@types/qs": "^6",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
     "@types/react-test-renderer": "^18.0.0",
