feat: 내 현재 위치 정보를 볼 수 있도록 구현하라
- Install react-use, sharp, @types/navermaps dependencies
- 내 현재 위치 위도 경도를 geolocation api로 받은 뒤 naver map api로 현재 주소를 가져오도록 구현
- naver map script 추가
- emptyAThenB util 함수 추가

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,6 +57,13 @@ jobs:
         with:
           node-version: ${{ env.DEFAULT_NODE_VERSION }}
 
+      - name: Create env file
+        run: |
+          touch .env
+          echo NEXT_PUBLIC_API_HOST = ${{ secrets.API_HOST }} >> .env
+          echo NEXT_PUBLIC_NAVER_CLIENT_ID = ${{ secrets.NAVER_CLIENT_ID }} >> .env
+          cat .env
+
       - name: Check dependency cache
         uses: actions/cache@v3
         with:
