--- a/package.json
+++ b/package.json
@@ -45,7 +45,9 @@
     "react-dom": "18.2.0",
     "react-input-range": "^1.3.0",
     "react-spring": "^9.5.2",
-    "recoil": "^0.7.4"
+    "react-use": "^17.4.0",
+    "recoil": "^0.7.4",
+    "sharp": "^0.30.7"
   },
   "devDependencies": {
     "@babel/core": "^7.18.6",
@@ -71,11 +73,13 @@
     "@types/facepaint": "^1",
     "@types/jest": "^28.1.3",
     "@types/jest-plugin-context": "^2",
+    "@types/navermaps": "^3.0.17",
     "@types/node": "18.0.0",
     "@types/qs": "^6",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
     "@types/react-test-renderer": "^18.0.0",
+    "@types/sharp": "^0",
     "@types/testing-library__jest-dom": "^5.14.5",
     "@typescript-eslint/eslint-plugin": "^5.29.0",
     "@typescript-eslint/parser": "^5.29.0",
